--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -10,6 +10,7 @@ body{
     left: 5%;
     right: 5%;
     width: 90%;
+    min-height: 50px;
     height: 8%;
     display: flex;
     z-index: 100;
@@ -48,8 +49,9 @@ nav .logo{
     list-style: none;
 }
 .navbar-toggle{
-    top: 5px;
     right: 0px;
+    margin-top: auto;
+    margin-bottom: auto;
     position: absolute;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 2em;
@@ -85,7 +87,7 @@ nav ul li a:hover{
     }
     .clicked{
         height: 28%;
-        border-radius: 25px;
+        border-radius: 31px;
     }
     .clicked ul li{
         font-style: normal;
@@ -109,8 +111,10 @@ nav ul li a:hover{
     nav .logo{
         margin: 5px 30px;
     }
-    
-           
+    .clicked ul {
+    height: 18%;    
+    min-height: 100px;
+    }       
 }
 @media screen and (min-width: 860px){
     .navbar-toggle{
