--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,7 @@
 b{
     height: 150vh;
 }
+
 form{
     background: #202020;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -20,7 +21,7 @@ input{
     background: #121212;
     box-shadow: inset 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
     border-radius: 185px;
-    font-size: 32px;
+    font-size: 4em;
     width: 200px;
     padding: 0 10px;
     color: white;
@@ -92,7 +93,7 @@ img{
     color: white;
 }
 strong{
-    font: 32px'Montserrat', sans-serif;
+    font: 4em'Montserrat', sans-serif;
     color: white;
 }
 .violet:hover{
@@ -101,25 +102,25 @@ strong{
 }
 @media screen and (max-width: 860px){
     input{
-        font-size: 16px;
-        width: 100px;
+        font-size: 2.5em;
+        width: 200px;
     }
     strong{
-        font-size: 16px;
+        font-size: 2.5em;
     }
     .fa-user{
         font-size: 144px;
         margin-top: -40px;
     }
     .link{
-        font-size: 16px;
+        font-size: 2.5em;
     }
     form{
-        width: 220px;
-        height: 380px;
+        width: 320px;
+        height: 620px;
     }
     button{
-        font-size: 16px;
-        width: 100px;
+        font-size: 2.5em;
+        width: 200px;
     }
 }
