--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -26,10 +26,10 @@ nav img{
 }
 nav .logo{
     font-style: normal;
-    font-weight: bold;
+    font-weight: bolder;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-decoration: none;
-    font-size: 2.5em;
+    font-size: 2em;
     left: 5px;
 }
 .white{
@@ -86,14 +86,14 @@ nav ul li a:hover{
             display: block;
     }
     .clicked{
-        height: 28%;
+        height: 35%;
         border-radius: 31px;
     }
     .clicked ul li{
         font-style: normal;
         top: 30px;
         margin-top: 10px;
-        margin-left: -208px;
+        margin-left: -180px;
         font-weight: bold;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         font-size: 2em;
