--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -10,13 +10,12 @@ body{
     left: 5%;
     right: 5%;
     width: 90%;
-    min-height: 50px;
-    height: 8%;
+    height: 50px;
     display: flex;
     z-index: 100;
     background: #202020;
     box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
-    border-radius: 85px;
+    border-radius: 50px;
 }
 nav img{
     top: 0;
@@ -87,7 +86,7 @@ nav ul li a:hover{
     }
     .clicked{
         height: 35%;
-        border-radius: 31px;
+        border-radius: 25px;
     }
     .clicked ul li{
         font-style: normal;
