--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -48,12 +48,11 @@ nav .logo{
     list-style: none;
 }
 .navbar-toggle{
+    top: 5px;
     right: 0px;
-    margin-top: auto;
-    margin-bottom: auto;
     position: absolute;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 2em;
+    font-size: 2.5em;
     color: white;
     margin-right: 20px;
 }
