--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -72,6 +72,7 @@ nav ul li a:hover{
     transition: 0.4s;
 }
 @media screen and (max-width: 860px){
+    
     .main-nav {
         list-style-type: none;
     }
@@ -115,6 +116,9 @@ nav ul li a:hover{
     }       
 }
 @media screen and (min-width: 860px){
+    .navbar {
+        height: 100px;
+    }
     .navbar-toggle{
         display: none;
     }
@@ -135,7 +139,8 @@ nav ul li a:hover{
         font-size: 2em;
     }
     nav ul {
-        margin-top: 1%;
+        margin-top: 30px;
+        margin-right: 10px;
     }
     nav{
         justify-content: space-between;
