--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -85,7 +85,7 @@ body {
 }
 @media (max-width: 998px) and (orientation: portrait) {
   .season-desc {
-    padding: 2.5rem 20px;
+    padding: 0 20px;
     font-size: 1.5em;
     height: unset;
     min-height: 100vh;
