--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -85,7 +85,10 @@ body {
 }
 @media (max-width: 998px) and (orientation: portrait) {
   .season-desc {
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 2.5rem;
+    padding-bottom: 0;
     font-size: 1.5em;
     height: unset;
     min-height: 100vh;
