--- a/styles/index.css
+++ b/styles/index.css
@@ -71,13 +71,13 @@ nav ul li a:hover{
     color: rgb(207, 207, 207);
     transition: 0.4s;
 }
-.avatar-index{
-    margin-top: -165px;
-    font-size: 228px;
-    color: white;
-}
+
 @media screen and (max-width: 860px){
-    
+    .avatar-index{
+        margin-top: -165px;
+        font-size: 228px;
+        color: white;
+    }
     .main-nav {
         list-style-type: none;
     }
@@ -150,6 +150,11 @@ nav ul li a:hover{
     nav{
         justify-content: space-between;
     }
+    .avatar-index{
+        margin-top: -190px;
+        font-size: 228px;
+        color: white;
+    }
 
 }
 .social-network{
@@ -173,4 +178,7 @@ nav ul li a:hover{
 }
 .fa-youtube{
     color: #FF0000;
+}
+h3{
+    font-size: 1.5em;
 }
