--- a/styles/news.css
+++ b/styles/news.css
@@ -3,17 +3,15 @@ p{
     color: white;
 }
 .card{
+    display: block;
     background: #202020;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     width: 85%;
     max-height: 720px;
-    top: 55%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
     box-sizing: border-box;
     text-align: center;
+    margin: 30px auto;
 }
 img{
     width: 100%;
@@ -42,4 +40,29 @@ img{
     text-transform: none;
     color: #8D56D0;
     text-decoration: none;
+}
+.news-feed{
+    text-align: center;
+    align-items: center;
+    margin-top: 125px;
+}
+.reaction{
+    font-size: 30px;
+    
+}
+.fa-heart{
+    margin: auto 20px;
+    margin-bottom: 10px;
+}
+.fa-comment{
+    margin: auto 20px;
+    margin-bottom: 10px;
+}
+.fa-share{
+    margin: auto 20px;
+    margin-bottom: 10px;
+}
+.fa-thumbtack{
+    margin: auto 20px;
+    margin-bottom: 10px;
 }
