--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -19,7 +19,7 @@ body {
   flex: 1 0 auto;
   position: relative;
   z-index: -1;
-  height: 80vh;
+  height: 100vh;
   width: 100vw;
   justify-content: center;
   align-items: center;
@@ -65,16 +65,18 @@ body {
   margin: 0;
   display: flex;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
   .desc-wrapper {
     margin: auto;
-    box-sizing: border-box;
+    height: 10px;
   }
-  .season--title {
+  .season-title {
+    padding-top: 100px;
     text-align: center;
-    font-size: 4em;
+    font-size: 2em;
     letter-spacing: 5px;
     text-transform: uppercase;
-    margin: 0 0;
+    margin: 40px 0;
   }
   .season--about {
     padding: 0;
