--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -26,7 +26,7 @@ body {
   transform: translateZ(-1px) scale(2);
 }
 .background--spring {
-  background-image: url('IMG-673260f04dde6ac5f8becda55b401519-V.jpg');
+  background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/location-smaller.png');
 }
 .background--summer {
   background-image: url('https://images.pexels.com/photos/375152/summer-sun-blooming-season-375152.jpeg?cs=srgb&dl=beautiful-bloom-blossom-375152.jpg&fm=jpg');
